--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
     "nodemon": "^2.0.13"
+  },
+  "devDependencies": {
+    "ejs-locals": "^1.0.2"
   }
 }
