--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "ejs-locals": "^1.0.2"
   },
   "devDependencies": {
     "ejs-locals": "^1.0.2"
