--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ejs-locals": "^1.0.2",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
-    "nodemon": "^2.0.13",
-    "ejs-locals": "^1.0.2"
+    "google-spreadsheet": "^3.1.15",
+    "nodemon": "^2.0.13"
   },
   "devDependencies": {
     "ejs-locals": "^1.0.2"
